[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rmbloat" # This must match the name you use for your code or package
author = "Joe Defen"
author-email = "joedef@duck.com"
home-page = "https://github.com/joedefen/rmbloat"
description = "An intelligent FFmpeg utility for prioritizing and converting inefficient video files (BLOAT score)."
requires = [
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Video",
]

[tool.flit.scripts]
rmbloat = "rmbloat:main" # Defines the command line entry point.
                         # This assumes you add a function called 'main' to rmbloat.py.
