[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rmbloat" # This must match the name you use for your code or package
author = "Joe Defen"
author-email = "joedef@duck.com"
home-page = "https://github.com/joedefen/rmbloat"
description-file = "README.md"
# "An intelligent FFmpeg utility for prioritizing and converting inefficient video files (BLOAT score)."
requires = [
    "console-window>=1.0.3",
    "ruamel.yaml>=0.18.16",
    "ruamel.yaml.clib>=0.2.15",
    "Send2Trash>=1.8.3",

]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Video",
]

[tool.flit.scripts]
rmbloat = "rmbloat.rmbloat:main" # Defines the command line entry point.
